<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <!-- 播放速度 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/playback_speed_title" />

        <TextView
            android:id="@+id/tvPlaybackRateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playback_speed_default" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderPlaybackRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.5"
            android:valueTo="2.0"
            android:stepSize="0.1" />

        <!-- 播放顺序 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/playback_order_title" />

        <RadioGroup
            android:id="@+id/rgPlaybackOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbSequential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playback_order_sequential" />

            <RadioButton
                android:id="@+id/rbRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playback_order_random" />

            <RadioButton
                android:id="@+id/rbLoop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playback_order_loop" />


        </RadioGroup>

        <!-- 循环类型 -->
        <LinearLayout
            android:id="@+id/llLoopType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loop_type_title" />

            <RadioGroup
                android:id="@+id/rgLoopType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbLoopFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loop_type_file" />

                <RadioButton
                    android:id="@+id/rbLoopTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loop_type_time" />

                <RadioButton
                    android:id="@+id/rbLoopSegment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loop_type_segment" />
            </RadioGroup>
        </LinearLayout>

        <!-- 循环间隔 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoopInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoopInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loop_interval_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 片段间隔 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSilenceThreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSilenceThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/silence_threshold"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>